按键组创建

--- a/qtquickcontrols2.conf
+++ b/qtquickcontrols2.conf
@@ -3,8 +3,6 @@ Style=Imagine
 
 [Imagine]
 Path=:/imagines
-
-[Imagine\Palette]
-Text=#55ddff
-ButtonText=#55ddff
-WindowText=#55ddff
+Palette\Text=#55ddff
+Palette\ButtonText=#55ddff
+Palette\WindowText=#55ddff
