--- a/qtquickcontrols2.conf
+++ b/qtquickcontrols2.conf
@@ -3,6 +3,6 @@ Style=Imagine
 
 [Imagine]
 Path=:/imagines
-Palette\Text=#55ddff
-Palette\ButtonText=#55ddff
-Palette\WindowText=#55ddff
+Palette\Text=#98F5FF
+Palette\ButtonText=#98F5FF
+Palette\WindowText=#98F5FF
